--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.19.0
   fl_chart: ^0.66.2
   shared_preferences: ^2.2.2
+  calendar_slider: ^0.0.4
 
 dev_dependencies:
   flutter_test:
